--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
         "max_conn": 16384
     },
     "pool": {
-        "host": "pool.ippan.net",
+        "host": "localhost",
         "port": 8484,
         "address": "22dc25WorxjzcBVHZrY914ne391t6",
         "falcon_file": "cert/falcon.keys",
