--- a/ipncore.service
+++ b/ipncore.service
@@ -16,10 +16,15 @@ User=root
 Group=root
 Type=simple
 TimeoutStopSec=0
+
+# Environment
 Environment=MIX_ENV=prod
-Environment=CERT_DIR=/etc/letsencrypt/live/ippan.uk/cert.pem
-Environment=KEY_DIR=/etc/letsencrypt/live/ippan.uk/privkey.pem
-Environment=CACERT_DIR=/etc/letsencrypt/live/ippan.uk/fullchain.pem
+Environment=DATA_DIR=data
+Environment=KEM_DIR=priv/kem.key
+Environment=FALCON_DIR=priv/falcon.key
+Environment=NODE_ID=0
+Environment=HOSTNAME=localhost
+
 WorkingDirectory=/usr/src/ipncore
 ExecStart=elixir --erl "+P 2000000 +A 10" -S mix run --no-halt --no-compile
 ExecStop=/bin/kill -s TERM $MAINPID
