--- a/docker/0.4/Dockerfile
+++ b/docker/0.4/Dockerfile
@@ -1,7 +1,5 @@
 FROM elixir:1.15.1-slim
 
-LABEL HASH_COMMIT=${HASH_COMMIT}
-
 ENV PATH="/root/.cargo/bin:${PATH}" \
     MIX_ENV=prod \
     DATA_DIR=/var/data \
@@ -36,9 +34,8 @@ EXPOSE 5815 8080
 
 VOLUME ["/var/data"]
 
-ENTRYPOINT ["/usr/src/ipncore/run"]
+ENTRYPOINT ["./run"]
 
 # docker build -t ipncore:0.4 .
 # docker run --rm -e ROLE=miner -e NODE=miner@localhost -e COOKIE=CfBa3fdR1AZuefnx -p 5815:5815 -p 8080:80 --volume data:/var/data -d --name miner ipncore:0.4
-# docker run --rm -e ROLE=miner -e NODE=miner@localhost -e COOKIE=CfBa3fdR1AZuefnx -p 5815:5815 -p 8080:80 --volume data:/var/data -it --name miner ipncore:0.4
 # docker exec -it miner /bin/bash
