--- a/ipncore.service
+++ b/ipncore.service
@@ -19,13 +19,15 @@ TimeoutStopSec=0
 
 # Environment
 Environment=MIX_ENV=prod
-Environment=DATA_DIR=data
-Environment=KEM_DIR=priv/kem.key
-Environment=FALCON_DIR=priv/falcon.key
-Environment=NODE_ID=0
+Environment=ROLE=${ROLE}
+Environment=NODE=${NODE}
+Environment=COOKIE=${COOKIE}
+Environment=DATA_DIR=${DATA_DIR}
+Environment=VID=${VID}
+Environment=MINER=${MINER}
 
-WorkingDirectory=/usr/src/ipncore
-ExecStart=elixir --erl "+P 2000000 +A 10" -S mix run --no-halt --no-compile
+WorkingDirectory=${PWD}
+ExecStart=./run.sh
 ExecStop=/bin/kill -s TERM $MAINPID
 Restart=always
 RestartSec=1
@@ -41,3 +43,7 @@ RestrictNamespaces=true
 [Install]
 WantedBy=multi-user.target
 Alias=ipncore.service
+
+# /etc/systemd/system/ipncore.service
+# systemctl daemon-reload
+# systemctl start ipncore.service
