docker and scripts

--- a/docker/0.5/Dockerfile
+++ b/docker/0.5/Dockerfile
@@ -13,10 +13,12 @@ RUN git clone --branch v0.5 https://kabei@github.com/kabei/ipncore.git
 
 WORKDIR /usr/src/ipncore
 
+COPY env_file ./env_file
+COPY run.sh ./scripts/run.sh
+
 RUN mix local.hex --force && mix deps.get && mix local.rebar --force
 RUN mix compile
-
-COPY env_file ./env_file
+RUN chmod +x run.sh
 
 EXPOSE 4848 5815 8080
 
