--- a/docker/0.5/Dockerfile
+++ b/docker/0.5/Dockerfile
@@ -1,17 +1,16 @@
 FROM elixir:1.16.0-slim
 
 ENV PATH="/root/.cargo/bin:${PATH}" \
-    MIX_ENV=prod \
-    DATA_DIR=/var/data
+    MIX_ENV=prod
 
-WORKDIR /usr/src
+VOLUME ["/src", "/data"]
 
 RUN apt-get update && apt-get install -y git curl cmake
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
 
-RUN git clone --branch v0.5 https://kabei@github.com/kabei/ipncore.git
+WORKDIR /src
 
-WORKDIR /usr/src/ipncore
+RUN git clone --branch v0.5 https://kabei@github.com/kabei/ipncore.git
 
 COPY env_file ./env_file
 COPY masterlist ./masterlist
@@ -23,7 +22,5 @@ RUN mix compile
 RUN chmod +x run.sh
 
 EXPOSE 4848 5815 8080
-
-VOLUME ["/var/data"]
 
 ENTRYPOINT ["./run.sh"]
